<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/ic_general_black_24dp"
        android:title="@string/title_general" />

    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/ic_sports_black_24dp"
        android:title="@string/title_sports" />

    <item
        android:id="@+id/navigation_technology"
        android:icon="@drawable/ic_technology_black_24dp"
        android:title="@string/title_technology" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/title_business" />
    <item
        android:id="@+id/navigation_gaming"
        android:icon="@drawable/ic_gaming_black_24dp"
        android:title="@string/title_gaming" />

</menu>
